--- a/style.css
+++ b/style.css
@@ -537,8 +537,7 @@ form label{
 .slikab{
         width: 300px;
         height: 300px;
-        margin: 20px;
-    
+        margin: 20px 20px 35px 20px;
         border-radius: 10px;
 }
 .slikab img{
