--- a/style.css
+++ b/style.css
@@ -126,7 +126,7 @@ nav a:hover{
         padding-bottom: 50px;
         text-align: center;
         margin: 10px auto;
-        width: 800px;
+        width: 30%;
         font-size: 20px;
 }
 #tekstpreko1 h1{
@@ -134,6 +134,7 @@ nav a:hover{
         font-weight: bold;
         border-radius: 10px;
         padding: 5px;
+        width: 100%;
 
 }
 #blok1{
@@ -255,19 +256,18 @@ nav a:hover{
         
 }
 #izatabele{
-        width: 77%;
+        width: 70%;
         height: 1450px;
         background-color: rgba(38, 38, 38, 0.801);
-        padding-top: 0.1px;
+        padding: 1px;
         margin: 200px auto;
         border-radius: 20px;
 }
 .blokt{
         height: 380px;
-        width: 910px;
+        width: 70%;
         background-color: #f0ffa6;
-        margin: 80px auto;
-        margin-left: 230px;
+        margin: 50px auto;
         padding: 30px;
         border-radius: 10px;   
 }
@@ -277,7 +277,7 @@ table{
         border-width: 3px;
         margin: 0 auto;
         padding: 10px;
-        width: 810px;
+        width: 70%;
         border-radius: 10px;
 }
 table th{
