--- a/style.css
+++ b/style.css
@@ -337,7 +337,11 @@ tr th:hover {background-color: rgba(38, 38, 38, 0.5);}
         border-radius: 20px;
         background-clip: content-box;
 }
-#blok3{
+#blokovi3{
+        width: 100%;
+        margin: 0px auto;
+}
+.blok3{
         float: left;
         width: 32%;
         height: 250px;
@@ -346,10 +350,10 @@ tr th:hover {background-color: rgba(38, 38, 38, 0.5);}
         border-radius: 20px;
         text-align: center;
 }
-#blok3 h2{
+.blok3 h2{
         padding: 10px;
 }
-#blok3 p{
+.blok3 p{
         font-size: 20px;
 }
 #forma{
@@ -478,6 +482,7 @@ form label{
 #galerija{
         width: 80%;
         margin: 0px auto;
+        padding-top: 100px;
 }
 #tekstgalerija{
         height: 40px;
