--- a/style.css
+++ b/style.css
@@ -457,7 +457,7 @@ form label{
 #omeni{
         width: 50%;
         height: 450px;
-        float: left;
+        float: right;
         margin: 3%;
         background-color: #ac9b09;
         border-radius: 10px;
