--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body {
 }
 
 header {
-  background-color: #191919;
+  background-color: #7c7c7c;
   position: -webkit-sticky;
   position: sticky;
   top: 0px;
@@ -57,7 +57,7 @@ header #nav ul li {
 
 header #nav ul li a {
   text-decoration: none;
-  color: #585858;
+  color: #191919;
   font-size: 25px;
 }
 
@@ -186,12 +186,13 @@ header #nav ul li a:hover {
 
 #servisi #za3bloka .sblok h3 {
   font-size: 25px;
+  margin: 13px 0;
 }
 
 #servisi #za3bloka .sblok:hover {
   border-radius: 15px;
-  -webkit-transform: scale(1.05);
-          transform: scale(1.05);
+  -webkit-transform: scale(1.04);
+          transform: scale(1.04);
 }
 
 #servisi #za3bloka .sblok:hover i {
@@ -223,6 +224,19 @@ header #nav ul li a:hover {
   text-align: center;
 }
 
+#projekti h3 {
+  padding: 3%;
+  font-size: 40px;
+  color: #98e45a;
+  text-align: center;
+  font-size: 25px;
+}
+
+#projekti h4 {
+  color: #7c7c7c;
+  font-size: 18px;
+}
+
 #projekti #zapr {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -239,7 +253,6 @@ header #nav ul li a:hover {
 
 #projekti #zapr #blokpr img {
   width: 100%;
-  height: 100%;
 }
 
 #projekti #zapr #blokpr:hover {
@@ -280,7 +293,6 @@ header #nav ul li a:hover {
 
 #projekti #zapr #blokpr2 img {
   width: 100%;
-  height: 100%;
 }
 
 #projekti #zapr #blokpr2:hover {
@@ -421,6 +433,7 @@ header #nav ul li a:hover {
   height: 30px;
   margin-bottom: 15px;
   background-color: #7c7c7c;
+  border-radius: 10px;
 }
 
 #contact #zaformu #forma #prezime {
@@ -428,6 +441,7 @@ header #nav ul li a:hover {
   height: 30px;
   margin-bottom: 15px;
   background-color: #7c7c7c;
+  border-radius: 10px;
 }
 
 #contact #zaformu #forma #mejl {
@@ -435,6 +449,7 @@ header #nav ul li a:hover {
   height: 30px;
   margin-bottom: 15px;
   background-color: #7c7c7c;
+  border-radius: 10px;
 }
 
 #contact #zaformu #forma #pisi {
@@ -445,10 +460,11 @@ header #nav ul li a:hover {
   font-size: 15px;
   margin-bottom: 15px;
   background-color: #7c7c7c;
+  border-radius: 10px;
 }
 
 #contact #zaformu #forma form label {
-  font-size: 30px;
+  font-size: 25px;
 }
 
 #contact #zaformu #forma #dugme {
@@ -456,7 +472,7 @@ header #nav ul li a:hover {
   color: #7c7c7c;
   -webkit-transition: 0.5s;
   transition: 0.5s;
-  font-size: 25px;
+  font-size: 20px;
   border-radius: 5px;
   border-color: white;
   padding: 5px;
